# MkNotes

./: .gitignore  CMakeLists.txt
i18n/: MkNotes_en.ts  MkNotes_fr.ts
include/: notesmanager.h
qml/: Main.qml  NoteEditor.qml  NotesList.qml  NotesModel.qml
qml/Singletons/: AppSettings.qml  Constants.qml  Context.qml
resources/icons/: icons.qrc
src/: main.cpp  notesmanager.cpp
